--- a/sass/elements/game/_friends.scss
+++ b/sass/elements/game/_friends.scss
@@ -1,16 +1,15 @@
-
 .friends {
     height: 100%;
     background-image: url("/images/background_friends.jpg");
     background-size: 100% 100%;
     display: flex;
-    &__itemWrapper{
+    &__itemWrapper {
         display: flex;
         flex-direction: column;
         width: 50%;
         flex-grow: 1;
-        &:last-child{
-            background: rgba(255,255,255,0.4);
+        &:last-child {
+            background: rgba(255, 255, 255, 0.4);
             padding: 10px;
             backdrop-filter: blur(8px);
         }
@@ -54,7 +53,6 @@
     }
 
     &__settingsWrapper {
-        
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -72,7 +70,7 @@
             cursor: pointer;
         }
     }
-    &__settingsTitle{
+    &__settingsTitle {
         letter-spacing: 0.125rem;
         font-size: 1.25rem;
         font-weight: bold;
@@ -80,7 +78,6 @@
         margin-bottom: 0.5rem;
     }
     &__settingsForm {
-    
         position: absolute;
         top: 81px;
         right: 70px;
@@ -96,14 +93,20 @@
             content: "";
             position: absolute;
             display: block;
-            width: 1.938rem;
-            height: 1.938rem;
+            width: 31px;
+            height: 31px;
             transform: rotate(45deg);
             background: #e80054;
             top: -20px;
             right: -20px;
             border: 3px solid $color-gray-dark;
             z-index: 2;
+            @include deskopM {
+                width: 26px;
+                height: 26px; 
+                top: -18px;
+                right: -18px;
+            }
         }
 
         &-filter {
@@ -114,6 +117,9 @@
                 background: #ffdc00;
             }
         }
+        @include deskopM {
+            padding: 9px;  
+        }
     }
     &__list {
         box-sizing: border-box;
@@ -122,113 +128,122 @@
         padding: 22px 0;
         height: calc(100% - 47px);
         overflow: auto;
-        &::-webkit-scrollbar{
+        &::-webkit-scrollbar {
             width: 0;
         }
     }
-    &__item{
+    &__item {
         width: 25%;
         border-radius: 10px;
         padding: 10px 0;
         display: flex;
         justify-content: center;
         height: 422px;
-        &-active{
+        &-active {
             width: 50%;
+        }
+        @include deskopM {
+           height: 365px ;
         }
     }
 }
 
-.friend{
+.friend {
     width: 80%;
     height: 100%;
-    background: rgba(255,255,255,0.4);
+    background: rgba(255, 255, 255, 0.4);
     position: relative;
     backdrop-filter: blur(2px);
     border-radius: 15px;
     padding-top: 10px;
     transition: 0.2s;
     overflow: hidden;
-    &:hover{
+    &:hover {
         backdrop-filter: blur(4px);
     }
-  &__portraitWrapper{
-      z-index: 3;
-      width: 100%;
-      height: 303px;
-      background-image: url('/images/friends_frame_friend.png');
-      background-size: 113% 100%;
-      background-position: center;
-      background-repeat: no-repeat;
-      display: flex;
-      justify-content: center;
-      align-items: flex-end;
-  }
-  &__portrait{
-      width: 50%;
-      margin-bottom: 44px;
-      height: auto;
-      object-fit: cover;
-  }
-  &__name{
-      margin-top: 6px;
-      text-align: center;
-      background: $color-gold;
-      font-size: 1.375rem;
-      padding: 0.375rem 0;
-      color: $color-white;
-  }
-  &__levelWrapper{
-      display: flex;
-      align-items: center;
-      margin-top: 0.5rem;
-  }
-  &__actionBar{
-      box-sizing: border-box;
-      display: flex;
-      width: 100%;
-      height: 50px;
-      background: $color-gray-dark;
-      padding: 5px;
-  }
-  &__actionBtn{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 50%;
-      height: 100%;
-      color: $color-white;
-      font-size: 1.563rem;
-      transition: 0.2s;
-      &:hover{
-          cursor: pointer;
-          letter-spacing: 0.125rem;
-      }
-      &-profile{
-        text-shadow: 0.125rem 0.125rem #e80054;
-      }
-      &-chat{
-        text-shadow:  0.125rem 0.125rem #fdd33a;
-      }
-  }
-  &__icon{
-    height: 100%;
-    width: auto;
-    object-fit: cover;
-    margin-right: 5px;
-  }
+    &__portraitWrapper {
+        z-index: 3;
+        width: 100%;
+        height: 303px;
+        background-image: url("/images/friends_frame_friend.png");
+        background-size: 113% 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        @include deskopM {
+            height: 255px ;
+         }
+    }
+    &__portrait {
+        width: 50%;
+        margin-bottom: 44px;
+        height: auto;
+        object-fit: cover;
+    }
+    &__name {
+        margin-top: 6px;
+        text-align: center;
+        background: $color-gold;
+        font-size: 1.375rem;
+        padding: 0.375rem 0;
+        color: $color-white;
+        @include deskopM {
+            padding: 0.25rem 0;
+         }
+    }
+    &__levelWrapper {
+        display: flex;
+        align-items: center;
+        margin-top: 0.5rem;
+    }
+    &__actionBar {
+        box-sizing: border-box;
+        display: flex;
+        width: 100%;
+        height: 50px;
+        background: $color-gray-dark;
+        padding: 5px;
+        font-size: 1.563rem;
+        @include deskopM {
+            height: 45px;
+            font-size: 1.375rem;
+         }
+    }
+    &__actionBtn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 50%;
+        height: 100%;
+        color: $color-white;
+        transition: 0.2s;
+        &:hover {
+            cursor: pointer;
+            letter-spacing: 0.125rem;
+        }
+        &-profile {
+            text-shadow: 0.125rem 0.125rem #e80054;
+        }
+        &-chat {
+            text-shadow: 0.125rem 0.125rem #fdd33a;
+        }
+    }
+    &__icon {
+        height: 35px;
+        width: auto;
+        object-fit: cover;
+        margin-right: 5px;
+
+        @include deskopM {
+            height: 32px;
+        }
+    }
 }
 
-
-
-
-
-
-
-
-
 .friends__checkboxWrapper {
-    height: 3.125rem;
+    height: 34px;
     color: $color-white;
     &:hover {
         text-decoration: underline;
@@ -239,6 +254,9 @@
         align-items: center;
         font-size: 1.375rem;
         padding-left: 2.563rem;
+        @include deskopM {
+            padding-left: 2.313rem;
+        }
     }
     span {
         display: block;
@@ -263,7 +281,7 @@
         animation: 0.3s 0.3s an__friends_checkbox_check forwards;
     }
 }
-#friends_branch{
+#friends_branch {
     border-left: 6px solid $color-gray-dark;
 }
 
