--- a/sass/elements/game/_shop.scss
+++ b/sass/elements/game/_shop.scss
@@ -4,6 +4,11 @@
         display: flex;
         justify-content: center;
         transition: 0.5s;
+        margin-top: 64px;
+        @include deskopM {
+            
+            margin-top: 58px;
+        }
     }
     &__characterImg {
         transition: 0.5s;
@@ -34,7 +39,6 @@
     &__shop {
         display: flex;
         flex-direction: column;
-        justify-content: flex-end;
     }
     &__itemsList {
         margin-bottom: 57px;
@@ -56,6 +60,10 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        @include deskopM {
+            width: 177px;
+            height: 177px;
+        }
     }
     &__slotWrapper {
         display: flex;
@@ -157,13 +165,12 @@
             padding-bottom: 0.375rem;
             font-weight: bold;
 
-            &:first-child{
+            &:first-child {
                 letter-spacing: 0.125rem;
             }
             &:last-child {
                 text-align: end;
                 letter-spacing: 0.063rem;
-
             }
             .better {
                 color: $color-green;
@@ -173,35 +180,42 @@
             }
         }
     }
-    &__deliveryWrapper{
+    &__deliveryWrapper {
         position: absolute;
         top: 0;
-       
+
         width: 41%;
         height: 59px;
-         border-bottom: 9px solid $color-gold ;
-         background: rgba(255,255,255,0.6);
-
-        &-blacksmith{
+        border-bottom: 9px solid $color-gold;
+        background: rgba(255, 255, 255, 0.6);
+        font-size: 16px;
+        &-blacksmith {
             padding-right: 10px;
             text-align: end;
-             right: 0;
+            right: 0;
             border-left: 9px solid $color-gold;
             border-bottom-left-radius: 40px;
+            @include deskopM {
+                border-left: 7px solid $color-gold;
+            }
+        }
+        @include deskopM {
+            border-bottom: 7px solid $color-gold;
+            height: 47px;
+            font-size: 13px;
         }
     }
-    &__deliveryTitle{
-        font-size: 1.25rem;
+    &__deliveryTitle {
+        font-size: 1.25em;
         font-weight: 900;
         letter-spacing: 0.063rem;
         word-spacing: 0.125rem;
-        text-shadow:  0.063rem 0 $color-gold;
+        text-shadow: 0.063rem 0 $color-gold;
     }
-    &__deliveryTime{
-        font-size: 1.875rem;
+    &__deliveryTime {
+        font-size: 1.875em;
         font-weight: 700;
         word-spacing: 0.125rem;
-        
     }
     &__itemPriceWrapper {
         height: 30px;
