--- a/sass/elements/game/_wizard.scss
+++ b/sass/elements/game/_wizard.scss
@@ -220,6 +220,9 @@
         height: auto;
         object-fit: cover;
         margin-bottom: 10px;
+        @include deskopM {
+            width: 70%;
+        }
     }
 }
 @keyframes an__spinning_wheel_rotate {
