--- a/sass/elements/game/_missions.scss
+++ b/sass/elements/game/_missions.scss
@@ -1,15 +1,17 @@
 .tavern {
     height: 100%;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
     background-image: url("/images/background_missions.jpg");
     background-size: 100% 50%;
     background-repeat: no-repeat;
     background-position: top;
+    &__item{
+        width: 100%;
+        height: 50%;
+        display: flex;
+    }
     &__characterWrapper {
-        grid-column: 1/2;
-        grid-row: 1/1;
+        width: 50%;
+        height: 100%;
         display: flex;
         justify-content: space-between;
         align-items: flex-end;
@@ -17,15 +19,15 @@
     }
     &__countdownWrapper{
         position: absolute;
+        height: 100%;
         left: 82px;
         color: $color-white;
         top: 10px;
         font-size: 20px;
     }
     &__detailsWrapper {
-        height: 50vh;
-        grid-column: 2/3;
-        grid-row: 1/1;
+        width: 50%;
+        height: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -36,8 +38,8 @@
         box-sizing: border-box;
     }
     &__list {
-        grid-column: 1/-1;
-        grid-row: 2/2;
+        width: 100%;
+        height: 100%;
         background: #cb8252;
         border: 13px solid #805333;
         box-shadow: 13px 13px #a56a43 inset, -5px -5px #a56a43 inset;
