--- a/sass/elements/game/_pets.scss
+++ b/sass/elements/game/_pets.scss
@@ -61,7 +61,7 @@
             background: rgba(255, 255, 255, 0.7);
             width: 21%;
         }
-        @include deskopM {
+        @include desktopM {
             width: 22%;
             height: 553px;
         }
