--- a/sass/elements/game/_chat.scss
+++ b/sass/elements/game/_chat.scss
@@ -88,7 +88,7 @@
         height: 70%;
         position: relative;
         border-radius: 0 20px 20px 0;
-        @include deskopM {
+        @include desktopM {
             width: 74%;
         }
     }
@@ -183,7 +183,7 @@
             width: 71%;
             object-fit: cover;
         }
-        @include deskopM {
+        @include desktopM {
             width: 65px;
             height: 65px;
         }
