--- a/sass/elements/game/_friends.scss
+++ b/sass/elements/game/_friends.scss
@@ -101,7 +101,7 @@
             right: -20px;
             border: 3px solid $color-gray-dark;
             z-index: 2;
-            @include deskopM {
+            @include desktopM {
                 width: 26px;
                 height: 26px; 
                 top: -18px;
@@ -117,7 +117,7 @@
                 background: #ffdc00;
             }
         }
-        @include deskopM {
+        @include desktopM {
             padding: 9px;  
         }
     }
@@ -142,7 +142,7 @@
         &-active {
             width: 50%;
         }
-        @include deskopM {
+        @include desktopM {
            height: 365px ;
         }
     }
@@ -172,7 +172,7 @@
         display: flex;
         justify-content: center;
         align-items: flex-end;
-        @include deskopM {
+        @include desktopM {
             height: 255px ;
          }
     }
@@ -189,7 +189,7 @@
         font-size: 1.375rem;
         padding: 0.375rem 0;
         color: $color-white;
-        @include deskopM {
+        @include desktopM {
             padding: 0.25rem 0;
          }
     }
@@ -206,7 +206,7 @@
         background: $color-gray-dark;
         padding: 5px;
         font-size: 1.563rem;
-        @include deskopM {
+        @include desktopM {
             height: 45px;
             font-size: 1.375rem;
          }
@@ -236,7 +236,7 @@
         object-fit: cover;
         margin-right: 5px;
 
-        @include deskopM {
+        @include desktopM {
             height: 32px;
         }
     }
@@ -254,7 +254,7 @@
         align-items: center;
         font-size: 1.375rem;
         padding-left: 2.563rem;
-        @include deskopM {
+        @include desktopM {
             padding-left: 2.313rem;
         }
     }
