--- a/sass/elements/game/_profile.scss
+++ b/sass/elements/game/_profile.scss
@@ -18,12 +18,12 @@
         border-bottom: 10px solid $color-gold;
         position: relative;
         &-specificUser{
-            @include deskopM{
+            @include desktopM{
             height: 460px; 
            }
         }
         &-currentUser{
-           @include deskopM{
+           @include desktopM{
             height: 510px;
         }  
         }
@@ -146,7 +146,7 @@
                 top: 21px;
                 clip-path: polygon(0 50%, 100% 100%, 100% 0);
             }
-            @include deskopM {
+            @include desktopM {
                 left: 160px;
             }
         }
@@ -158,7 +158,7 @@
                 top: 21px;
                 clip-path: polygon(100% 50%, 0 100%, 0 0);
             }
-            @include deskopM {
+            @include desktopM {
                 right: 160px;
             }
         }
@@ -171,7 +171,7 @@
                 top: 21px;
                 clip-path: polygon(0 50%, 100% 100%, 100% 0);
             }
-            @include deskopM {
+            @include desktopM {
                 left: 160px;
             }
         }
@@ -184,7 +184,7 @@
                 top: 21px;
                 clip-path: polygon(100% 50%, 0 100%, 0 0);
             }
-            @include deskopM {
+            @include desktopM {
                 right: 160px;
             }
         }
@@ -197,7 +197,7 @@
                 bottom: 21px;
                 clip-path: polygon(0 50%, 100% 100%, 100% 0);
             }
-            @include deskopM {
+            @include desktopM {
                 left: 160px;
             }
          
@@ -211,7 +211,7 @@
                 bottom: 21px;
                 clip-path: polygon(100% 50%, 0 100%, 0 0);
             }
-            @include deskopM {
+            @include desktopM {
                 right: 160px;
             }
         }
@@ -408,7 +408,7 @@
             line-height: 1.563rem;
             font-family: $fontFamily-medivalSharp;
         }
-        @include deskopM {
+        @include desktopM {
             height: 27%;
         }
     }
@@ -449,7 +449,7 @@
             cursor: pointer;
             background: rgba(255, 255, 255, 0.5);
         }
-        @include deskopM {
+        @include desktopM {
             width: 122px;
             height: 122px;
           
@@ -703,7 +703,7 @@
             bottom: -26px;
             clip-path: polygon(50% 100%, 0 0, 100% 0);
         }
-        @include deskopM{
+        @include desktopM{
             transform: translate(153px, -100%);
         }
     }
@@ -714,7 +714,7 @@
             bottom: -26px;
             clip-path: polygon(50% 100%, 0 0, 100% 0);
         }
-        @include deskopM{
+        @include desktopM{
             transform: translate(144px, -100%);
         }
     }
@@ -725,7 +725,7 @@
             bottom: -26px;
             clip-path: polygon(50% 100%, 0 0, 100% 0);
         }
-        @include deskopM{
+        @include desktopM{
             transform: translate(295px, -100%);
         }
     }
@@ -738,7 +738,7 @@
             bottom: -26px;
             clip-path: polygon(50% 100%, 0 0, 100% 0);
         }
-        @include deskopM{
+        @include desktopM{
             margin-top: 134px;
         }
     }
@@ -750,7 +750,7 @@
             bottom: -26px;
             clip-path: polygon(50% 100%, 0 0, 100% 0);
         }
-        @include deskopM{
+        @include desktopM{
             margin-top: 134px;
         }
     }
@@ -762,7 +762,7 @@
             bottom: -26px;
             clip-path: polygon(50% 100%, 0 0, 100% 0);
         }
-        @include deskopM{
+        @include desktopM{
             transform: translate(144px, -100%);
             margin-top: 134px;
         }
@@ -775,7 +775,7 @@
             bottom: -26px;
             clip-path: polygon(50% 100%, 0 0, 100% 0);
         }
-        @include deskopM{
+        @include desktopM{
             margin-top: 134px;
         }
     }
@@ -787,7 +787,7 @@
             bottom: -26px;
             clip-path: polygon(50% 100%, 0 0, 100% 0);
         }
-        @include deskopM{
+        @include desktopM{
             margin-top: 134px;
             transform: translate(295px, -100%);
         }
@@ -802,7 +802,7 @@
             top: -26px;
             clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
         }
-        @include deskopM{
+        @include desktopM{
             transform: translate(-1px, 3px);
         }
     }
@@ -813,7 +813,7 @@
             top: -26px;
             clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
         }
-        @include deskopM{
+        @include desktopM{
             transform: translate(151px, 3px);
         }
     }
@@ -824,7 +824,7 @@
             top: -26px;
             clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
         }
-        @include deskopM{
+        @include desktopM{
             transform: translate(153px, 3px);
         }
     }
@@ -835,7 +835,7 @@
             top: -26px;
             clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
         }
-        @include deskopM{
+        @include desktopM{
             transform: translate(171px, 3px);
         }
     }
@@ -846,7 +846,7 @@
             top: -26px;
             clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
         }
-        @include deskopM{
+        @include desktopM{
             transform: translate(290px, 3px);
         }
     }
@@ -857,7 +857,7 @@
             top: -26px;
             clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
         }
-        @include deskopM{
+        @include desktopM{
             transform: translate(-1px, 110px);
         }
     }
@@ -868,7 +868,7 @@
             top: -26px;
             clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
         }
-        @include deskopM{
+        @include desktopM{
             transform: translate(151px, 110px);
         }
     }
@@ -879,7 +879,7 @@
             top: -26px;
             clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
         }
-        @include deskopM{
+        @include desktopM{
             transform: translate(153px, 110px);
         }
     }
@@ -890,7 +890,7 @@
             top: -26px;
             clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
         }
-        @include deskopM{
+        @include desktopM{
             transform: translate(171px, 110px);
         }
     }
@@ -901,7 +901,7 @@
             top: -26px;
             clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
         }
-        @include deskopM{
+        @include desktopM{
             transform: translate(290px, 110px);
         }
     }
@@ -914,13 +914,13 @@
         position: absolute;
         &-1{
             transform: translate(258px, -100%);
-            @include deskopM {
+            @include desktopM {
                 transform: translate(170px, -100%);
             }
         }
         &-2{
             transform: translate(454px, -100%);
-            @include deskopM {
+            @include desktopM {
                 transform: translate(325px, -100%);
             }
         }
@@ -944,7 +944,7 @@
     }
     .potion__label-1{
         transform: translate(156px, -100%);
-        @include deskopM{
+        @include desktopM{
             transform: translate(91px, -100%);
         }
     }
@@ -956,7 +956,7 @@
         width: 100%;
         margin-top: 10px;
         height: 135px;
-        @include deskopM{
+        @include desktopM{
             height: 120px;
             padding-bottom: 4px;
         }
@@ -1006,7 +1006,7 @@
         font-weight: bold;
         letter-spacing: 0.125rem;
         font-size: 20px;
-        @include deskopM{
+        @include desktopM{
             font-size: 18px; 
            }
     }
