--- a/sass/elements/game/_searchFriends.scss
+++ b/sass/elements/game/_searchFriends.scss
@@ -82,7 +82,7 @@
             letter-spacing: 0.063rem;
         }
 
-        @include deskopM{
+        @include desktopM{
          margin-left: 10px;  
          width: 135px;  
         }
@@ -132,7 +132,7 @@
             background: $color-green;
             clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
         }
-        @include deskopM{
+        @include desktopM{
             width: 288px;  
            }
     }
@@ -181,7 +181,7 @@
             margin-left: 3px;
             margin-right: -2px;
         }
-        @include deskopM{
+        @include desktopM{
             width: 100%;  
            }
     }
