--- a/sass/elements/game/_shop.scss
+++ b/sass/elements/game/_shop.scss
@@ -5,7 +5,7 @@
         justify-content: center;
         transition: 0.5s;
         margin-top: 64px;
-        @include deskopM {
+        @include desktopM {
             
             margin-top: 58px;
         }
@@ -60,7 +60,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        @include deskopM {
+        @include desktopM {
             width: 177px;
             height: 177px;
         }
@@ -195,11 +195,11 @@
             right: 0;
             border-left: 9px solid $color-gold;
             border-bottom-left-radius: 40px;
-            @include deskopM {
+            @include desktopM {
                 border-left: 7px solid $color-gold;
             }
         }
-        @include deskopM {
+        @include desktopM {
             border-bottom: 7px solid $color-gold;
             height: 47px;
             font-size: 13px;
