--- a/sass/elements/game/_profile.scss
+++ b/sass/elements/game/_profile.scss
@@ -17,15 +17,19 @@
         grid-template-columns: repeat(4, 1fr);
         border-bottom: 10px solid $color-gold;
         position: relative;
+          @include desktopM{
+            border-bottom: 7px solid $color-gold;
+        }
         &-specificUser{
             @include desktopM{
-            height: 460px; 
+            height: 436px; 
            }
         }
         &-currentUser{
            @include desktopM{
             height: 510px;
         }  
+      
         }
        
     }
@@ -321,6 +325,11 @@
         -webkit-text-stroke: 2px $color-gray_dark;
         text-shadow: 3px 3px $color-gray_dark;
         font-style: italic;
+        @include desktopM {
+            height: 38px;
+            font-size: 36px;
+            text-shadow: 2px 2px $color-gray_dark;
+        }
     }
     &__levelProgress {
         z-index: -1;
@@ -338,13 +347,16 @@
         background: $color-white;
         margin: 0 auto;
         font-size: 1.5rem;
-        padding: 2px 4px;
+        padding: 2px 0;
         text-align: center;
         border-radius: 6px;
         font-weight: bold;
         letter-spacing: 0.125rem;
         box-shadow: 0 0 13px $color-red;
         text-shadow: 1px 1px $color-red;
+        @include desktopM {
+            padding: 1px 0;
+        }
     }
     &__equipmentIcon {
         width: 43%;
@@ -475,6 +487,9 @@
         position: relative;
         &-searchedUser{
             margin-top: 10px;
+            @include desktopM{
+                margin-top: 7px;
+            }
         }
     }
     &__generalItem {
@@ -504,18 +519,25 @@
                 width: 67%;
             }
         }
+        @include desktopM{
+            width: 100px;
+            height: 100px;
+        }
     }
     &__generalText {
         width: 120px;
         text-align: center;
         overflow: hidden;
-        margin-top: 0.563rem;
-        padding: 0.375rem 0;
+        margin-top: 9px;
+        padding: 6px 0;
         background-color: $color-wood-dark;
         color: $color-gold;
         font-weight: 600;
         letter-spacing: 0.063rem;
         border-radius: 3px;
+        @include desktopM{
+            margin-top: 5px;
+        }
     }
     &__goldBar {
         height: 36px;
@@ -959,6 +981,7 @@
         @include desktopM{
             height: 120px;
             padding-bottom: 4px;
+            margin-top: 7px;
         }
     }
     &__statsTable{
@@ -968,6 +991,10 @@
         border-radius: 20px;
         padding: 10px;
         background: $color-gray_dark;
+        @include desktopM{
+           height: 92%;
+        }
+
     }
     &__actionBar{
         box-sizing: border-box;
@@ -979,6 +1006,11 @@
         border-radius: 25px;
         height: 50px;
         background: $color-gray_dark;
+        @include desktopM{
+            height: 35px;
+            margin: 5px auto;
+            padding: 3px;
+        }
     }
     &__actionIcon{
        height: 100%;
@@ -998,6 +1030,9 @@
 .searchedUser__statsTable{
     td:first-child{
         padding-top: 10px;
+        @include desktopM {
+            padding-top: 7px;
+        }
     }
     td{
         padding-left: 10px ;
