--- a/sass/elements/game/_wizard.scss
+++ b/sass/elements/game/_wizard.scss
@@ -12,11 +12,17 @@
         grid-column: 1/1;
         grid-row: 1/1;
         padding-left: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     &__characterImg {
         width: 96%;
         height: auto;
         object-fit: cover;
+        @include desktopM {
+            width: 88%;
+        }
     }
     &__descriptionWrapper {
         display: flex;
@@ -26,6 +32,9 @@
         grid-row: 2/2;
         padding: 20px;
         max-height: 336px;
+        @include desktopM {
+            padding: 10px;
+        }
     }
     &__description {
         width: 100%;
@@ -36,7 +45,9 @@
         position: relative;
         backdrop-filter: blur(2px);
         transition: 0.3s;
-
+        @include desktopM {
+            padding: 7px;
+        }
         &:hover {
             backdrop-filter: blur(4px);
         }
