--- a/sass/elements/game/_shop.scss
+++ b/sass/elements/game/_shop.scss
@@ -6,8 +6,8 @@
         transition: 0.5s;
         margin-top: 64px;
         @include desktopM {
-            
-            margin-top: 58px;
+            margin-top: 32px;
+            height: 305px;
         }
     }
     &__characterImg {
@@ -16,6 +16,9 @@
         height: 100%;
         object-fit: cover;
         transition: 0.5s;
+        @include desktopM {
+            //height: 85%;
+        }
     }
     &__character {
         height: 100%;
@@ -92,8 +95,10 @@
 
     &__itemInfoWrapper {
         width: 360px;
+        z-index: 1;
     }
     &__itemInfo {
+        
         box-sizing: border-box;
         transition: 0.5s;
         background: $color-white;
@@ -105,6 +110,9 @@
         animation: 0.6s an__blacksmith_messageCloud forwards;
         position: relative;
         transition: 0.5s;
+        @include desktopM{
+            padding: 7px;
+        }
         &::after {
             content: "";
             display: block;
@@ -115,7 +123,11 @@
             height: 160px;
             background: $color-white;
             clip-path: polygon(98% 64%, 0 0, 0 36%);
-            z-index: 2;
+            z-index: -1;
+            @include desktopM{
+                width: 170px;
+                right: -167px;
+            }
         }
     }
     &__itemTitle {
@@ -155,6 +167,9 @@
         }
         &-legendary {
             -webkit-text-stroke: 0.063rem $color-gold;
+        }
+        @include desktopM{
+            margin-top: 7px;
         }
     }
     &__itemStats {
