--- a/sass/elements/game/_navMenu.scss
+++ b/sass/elements/game/_navMenu.scss
@@ -16,6 +16,10 @@
         text-align: center;
         letter-spacing: 0.313rem;
         color: $color-red;
+        @include desktopM{
+            height: 75px;
+            font-size: 39px;
+        }
     }
     &__list {
         margin-top: 10px;
@@ -28,6 +32,10 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        @include desktopM{
+           margin-top: 6px;
+           height: 50px;
+        }
     }
   
 
@@ -45,12 +53,15 @@
             height: 100%;
             object-fit: cover;
         }
+        @include desktopM{
+           width: 56px;
+         }
     }
     &__link{
         position: relative;
         z-index: 0;
         margin-left: -15px;
-        padding: 0.375rem;
+        padding: 6px;
         padding-left: 20px;
         width: 100%;
         background: $color-white;
@@ -58,6 +69,10 @@
         font-size: 1.438rem;
         overflow: hidden;
         color: $color-gray_dark;
+        @include desktopM{
+            padding: 5px;
+            padding-left: 20px;
+          }
         &::after {
             content: "";
             display: block;
@@ -69,6 +84,9 @@
             right: -100%;
             transform: rotate(21deg);
             transition: 0.4s;
+            @include desktopM{
+                width: 55px;
+            }
         }
         &:hover::after {
             right: 0;
