--- a/sass/elements/game/_account.scss
+++ b/sass/elements/game/_account.scss
@@ -12,7 +12,6 @@
         background: rgba(255, 255, 255, 0.5);
         backdrop-filter: blur(2px);
         border-radius: 20px;
-
     }
     &__title{
         text-align: center;
@@ -36,6 +35,10 @@
         align-items: center;
         margin-top: 21px;
         box-sizing: border-box;
+        @include desktopS{
+            margin-top: 16px;
+            height: 59px;
+        }
     }
     &__elementIcon{
         height: 100%;
@@ -49,10 +52,13 @@
             width: 100%;
             object-fit: cover;
         }
+        @include desktopS{
+            width: 59px;
+        }
     }
     &__elementContent{
         width: 84%;
-        height: 50px;
+        height: 3.125rem;
         background: $color-white;
         transform: translateX(-15px);
         border-radius: 0 30px 30px 0;
