--- a/sass/settings/_all.scss
+++ b/sass/settings/_all.scss
@@ -5,6 +5,12 @@ body{
     font-family: 'Kanit', sans-serif;
     color: $color-black;
 }
+:root{
+    @include desktopS{
+      font-size: 14px;
+    }
+
+}
 *{
     box-sizing: border-box;
 }
