--- a/sass/elements/game/_searchFriends.scss
+++ b/sass/elements/game/_searchFriends.scss
@@ -52,9 +52,9 @@
         }
     }
     &__status {
-        margin-left: 20px;
+        margin-left: 5px;
         height: 32px;
-        width: 146px;
+        width: 91%;
         background: $color-white;
         display: flex;
         align-items: center;
@@ -86,11 +86,15 @@
          margin-left: 10px;  
          width: 135px;  
         }
+        @include desktopS{
+            margin-left: 6px;
+            width: 119px;
+        }
     }
     &__nick {
         margin-left: 20px;
         height: 32px;
-        width: 344px;
+        width: 90%;
         background: $color-white;
         display: flex;
         align-items: center;
@@ -106,7 +110,7 @@
             }
         }
         strong {
-            margin-left: 0.25rem;
+            margin-left: 9px;
             font-weight: bold;
             font-size: 1.438rem;
             letter-spacing: 0.063rem;
@@ -159,21 +163,21 @@
         align-items: center;
         justify-content: flex-end;
         height: 32px;
-        width: 90%;
         background: $color-white;
         border-radius: 15px;
         position: relative;
         z-index: 0;
-  
+        width: 94%;
+        margin-left: 9px;
+    
      
         &::after{
-            z-index: -1;
-            content: '';
+            content: "";
             display: block;
             height: 100%;
             width: 40px;
             position: absolute;
-            left: -3px;
+            left: -10px;
             background: $color-white;
             clip-path: polygon(100% 0%, 75% 50%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
         }
@@ -201,27 +205,49 @@
     }
     table {
         width: 100%;
+        border-collapse: collapse;
+        table-layout:fixed;
+        td, th{
+            overflow: hidden;
+            display: inline-block;
+            white-space: nowrap;
+            padding: 1px;
+        }
+        tr{
+            th:first-child, td:first-child{
+                width: 26%;
+               
+            }
+            th:nth-child(2), td:nth-child(2){
+                width: 48%;
+            }
+            th:last-child, td:last-child{
+                width: 26%;
+               
+            }
+        }
     }
     thead {
         border-bottom: 6px solid $color-blue;
-        th {
+        th{
+            font-size: 1.563rem;
             font-weight: bold;
             letter-spacing: 0.125rem;
-            font-size: 1.625rem;
-            border-right: 6px solid #343a40;
-        }
-        th:last-child {
-            border: none;
+            border-right: 6px solid $color-gray_dark;
+            &:last-child{
+                border-right: none;
+            }
         }
     }
     tbody {
         font-size: 1.25rem;
         tr {
-            height: 2.5rem;
+            height: 40px;
             &:hover {
                 cursor: pointer;
                 border-bottom: 5px solid $color-gold;
             }
+          
         }
         td {
             text-align: center;
