--- a/sass/elements/game/_friends.scss
+++ b/sass/elements/game/_friends.scss
@@ -3,6 +3,11 @@
     background-image: url("/images/background_friends.jpg");
     background-size: 100% 100%;
     display: flex;
+    .searchFriend__input{
+        @include desktopS{
+            width: 353px;
+        }
+    }
     &__itemWrapper {
         display: flex;
         flex-direction: column;
@@ -20,13 +25,16 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        padding: 9px;
+        @include desktopS {
+            height: 40px;
+            padding: 6px;
+        }
     }
     &__searchWrapper {
         display: flex;
         align-items: center;
-        width: 300px;
         box-sizing: border-box;
-        padding: 9px;
         height: 100%;
     }
     &__searchIcon {
@@ -56,7 +64,6 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 9px;
         height: 100%;
         margin-right: 53px;
         position: relative;
@@ -107,6 +114,12 @@
                 top: -18px;
                 right: -18px;
             }
+            @include desktopM {
+                width: 21px;
+                height: 21px; 
+                top: -15px;
+                right: -15px;
+            }
         }
 
         &-filter {
@@ -116,9 +129,17 @@
             &::after {
                 background: #ffdc00;
             }
+            @include desktopS {
+                top: 48px;
+                right: 23px;
+            }
         }
         @include desktopM {
             padding: 9px;  
+        }
+        @include desktopS {
+            top: 48px;
+            right: 62px;
         }
     }
     &__list {
@@ -130,6 +151,10 @@
         overflow: auto;
         &::-webkit-scrollbar {
             width: 0;
+        }
+        @include desktopS{
+            height: calc(100% - 40px);
+            padding: 10px 0;
         }
     }
     &__item {
@@ -144,6 +169,9 @@
         }
         @include desktopM {
            height: 365px ;
+        }
+        @include desktopS {
+            height: 330px;
         }
     }
 }
@@ -174,6 +202,9 @@
         align-items: flex-end;
         @include desktopM {
             height: 255px ;
+         }
+         @include desktopS {
+            height: 224px ;
          }
     }
     &__portrait {
@@ -361,3 +392,4 @@
         border: 3px solid #3a86ff;
     }
 }
+
